--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,31 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+h3{
+}
+
+.blob_title_text{
+  font-size: 16px;
+  font-weight: bold;
+}
+.blob_title_subtext{
+  font-size: 10px;
+  font-weight: normal;
+  font-style:italic;
+  padding-left: 5px;
+}
+.blob_body,.blob_score_text{
+  font-size:14px;
+  font-weight: normal;
+  font-style: normal;
+}
+.blob_score_text{
+  font-size:12px;
+  float:right;
+}
+
+.menu_holder{
+  margin-top:60px;
+  padding-left:15px;
+  border-left:1px solid #eee;
+}
