--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-h3{
-}
 
 .blob_title_text{
   font-size: 16px;
@@ -14,7 +12,7 @@ h3{
   font-size: 10px;
   font-weight: normal;
   font-style:italic;
-  padding-left: 5px;
+  margin-top:-5px;
 }
 .blob_body,.blob_score_text{
   font-size:14px;
@@ -23,6 +21,10 @@ h3{
 }
 .blob_score_text{
   font-size:12px;
+  float:right;
+}
+
+.button_menu{
   float:right;
 }
 
