Feat: Added comment control list and modal to add comment
Added the Comment views (list and item) as well as the comment form and post form to add new items.
Created new buttons for the remove, edit and add comments and posts.

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: sans-serif;
 }
 
-.blob_title_text{
+.blob_title_text, .title_text{
   font-size: 16px;
   font-weight: bold;
 }
@@ -24,7 +24,7 @@ body {
   float:right;
 }
 
-.button_menu{
+.button_right{
   float:right;
 }
 
@@ -32,4 +32,8 @@ body {
   margin-top:60px;
   padding-left:15px;
   border-left:1px solid #eee;
+}
+
+.full_width{
+  width:100%;
 }
