--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,9 @@ body {
   padding-left:15px;
   border-left:1px solid #eee;
 }
+.menu_holder .active a {
+  color:white;
+}
 
 .full_width{
   width:100%;
