fix: Fixed comments count not updating on filtered posts
Fixed the issue of not updating comment count when selecting a filtered
posts list.
Fixed a bug with filtered posts not updating the vote count.
Enhanced the categorie list to show up in the posts list main pages.

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
   padding-left:15px;
   border-left:1px solid #eee;
 }
-.menu_holder .active a {
+.menu_holder .active button {
   color:white;
 }
 
