--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@ body {
   float:right;
 }
 
+.container_right{
+  float:right;
+  width:200px;
+}
+
 .button_padding{
   padding-top:8px;
 }
@@ -47,4 +52,5 @@ body {
 
 .full_width{
   width:100%;
+  height:35px;
 }
